change celery task time limit

--- a/checkout_bot/conf/celery.conf
+++ b/checkout_bot/conf/celery.conf
@@ -1,6 +1,6 @@
 [program:celery]
 directory=/home/ubuntu/checkout_bot/checkout_bot/
-command=/home/ubuntu/checkout_bot/.env/bin/celery --app=checkout_bot.celery:app worker --concurrency=1 --soft-time-limit=600 --loglevel=info
+command=/home/ubuntu/checkout_bot/.env/bin/celery --app=checkout_bot.celery:app worker --concurrency=1 --soft-time-limit=600 --time-limit=650 --loglevel=info
 autostart=true
 autorestart=true
 user=ubuntu
